--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "private": true,
   "workspaces": [
     "packages/*"
   ],
+  "main": "index.js",
+  "name": "sydney-test",
+  "version": "1.0.7",
   "scripts": {
     "build": "babel packages -d dist"
   },
