--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   ],
   "main": "index.js",
   "name": "sydney-test",
-  "version": "1.0.7",
+  "version": "1.0.12",
   "scripts": {
-    "build": "babel packages -d dist"
+    "build": "babel src -d dist"
   },
   "dependencies": {
     "@babel/cli": "^7.14.8",
